--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                     A lack of rewarding opportunities might lead to social discontent and greater migration overseas in search of better chances. 
                     Talented individuals who seek greater prospects in nations such as the United States, Canada, and Australia leave Bangladesh,
                     depleting the local talent pool and stifling innovation.</p>
-                  <img src="c:\Users\Kryptonite\Pictures\white chart.png" alt="" width="800"> 
+                  <img src="https://github.com/Kryptonite778/My-Project/blob/main/white%20chart.png?raw=true" alt="" width="800"> 
                   
             </ul>
         </section>
