--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
               Recognize informal and vocational training accomplishments with government-certified certifications.
               Ensure that certificates are in line with international standards for global employability.</p>
               
-            <img src="c:\Users\Kryptonite\Pictures\Competition essentials\p1if0125mn1aqn11sq12ige591f7d4-0.png" alt="Solution Flowchart" width="800">
+            <img src="hTML FILES/p1if0125mn1aqn11sq12ige591f7d4-0.png" alt="Solution Flowchart" width="800">
           </div>
 
         </section>
